--- a/laptop/src/icons/icon.style.css
+++ b/laptop/src/icons/icon.style.css
@@ -2,3 +2,17 @@
     width: 20px;
     height: 20px;
 }
+
+@media (min-width: 600px) {
+    .iconSize {
+        width: 12px;
+        height: 12px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .iconSize {
+        width: 24px;
+        height: 24px;
+    }
+}
