--- a/laptop/src/index.css
+++ b/laptop/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Londrina+Shadow&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
   overflow: hidden;
 }
